--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "laravel/telescope": "^5.6",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-permission": "^6.16",
-        "tightenco/ziggy": "^2.4"
+        "tightenco/ziggy": "^2.4",
+        "fakerphp/faker": "^1.23"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
-        "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.41",
