--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@primevue/auto-import-resolver": "^4.3.2",
+        "@types/lodash": "^4.17.16",
         "@types/node": "^22.13.5",
         "@vant/auto-import-resolver": "^1.3.0",
         "@vue/eslint-config-typescript": "^14.3.0",
